Refactor layout components to use C# classes
Refactored `TnTBody`, `TnTFooter`, `TnTHeader`, and `TnTSideNav` to use C# classes instead of Razor components. Updated `MainLayout.razor` to include `TnTBody` and `TnTFooter` components. Removed corresponding `.razor` and `.razor.cs` files. Created `TnTLayoutComponent` abstract class to standardize layout components. Updated `_layout.scss` to use CSS classes instead of custom elements. Modified `TnTComponents.lib.module.js` to handle scroll events on new class-based structure and added `TnTComponents` object to `window`.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -10,6 +10,14 @@
         This is my header
     </TnTHeader>
 
+    <TnTBody>
+        @Body
+    </TnTBody>
+
+    <TnTFooter>
+        Footer content
+    </TnTFooter>
+    @*
     <TnTSideNav Title="My Title">
         <h3>
             My First Headline
@@ -132,6 +140,7 @@
     <TnTFooter>
         Footer content
     </TnTFooter>
+    *@
 </TnTLayout>
 
 <TnTDialog @rendermode="InteractiveAuto" />
