--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -2,7 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<tnt-layout @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
-        @ChildContent
-</tnt-layout>
+<div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
+    @ChildContent
+</div>
 <TnTPageScript Src="./_content/TnTComponents/Layout/TnTLayout.razor.js" />
