--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -1,207 +1,264 @@
-﻿tnt-layout {
-    display: block;
-
-    tnt-side-nav {
-        transition: 200ms ease-in-out;
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
-
-    tnt-header, tnt-footer {
+﻿.tnt-layout {
+    .tnt-header, .tnt-footer {
         display: flex;
+        flex-direction: row;
         width: 100%;
-        transition: box-shadow ease-in-out 500ms;
-    }
-
-    tnt-body {
-        display: block;
-        min-height: 100vh;
-    }
-
-    tnt-side-nav {
-        position: fixed;
-        left: 0;
-        top: 0;
-        height: 100%;
-        width: $tnt-side-nav-width;
-        z-index: 999;
-        padding: 0.5rem;
-        box-sizing: border-box;
-
-        tnt-side-nav-menu-group {
-            transition: 200ms ease-in-out;
-            user-select: none;
-            cursor: pointer;
-            overflow: hidden;
-            display: block;
-            width: 100%;
-
-            & > span {
-                display: inline-flex;
-                height: 3rem;
-                align-content: center;
-                align-items: center;
-                width: 100%;
-
-                //@extend .tnt-actionable-bg-color-transparent;
-            }
-
-            & > span > span:last-child.tnt-icon {
-                transition: 200ms ease-in-out;
-                margin-left: auto;
-                transform: rotateZ(0);
-            }
-
-            &.tnt-disabled {
-                pointer-events: none;
-                cursor: not-allowed;
-                opacity: 0.3;
-            }
-
-            & > div {
-                display: flex;
-                flex-direction: column;
-                margin-left: 1.25rem;
-                height: fit-content;
-                transition: height ease-in-out 200ms;
-
-                & > div {
-                    border-left: 1px solid $tnt-color-outline;
-                }
-            }
-
-            &:not(.tnt-expanded) {
-                & > div {
-                    height: 0px;
-                }
-            }
-
-            &.tnt-expanded {
-                & > span > span:last-child.tnt-icon {
-                    transform: rotateZ(180deg);
-                }
-            }
-
-            @extend .tnt-title-small;
-
-            span.tnt-icon {
-                vertical-align: bottom;
-                padding: 0 0.5rem;
-            }
-        }
-
-        div.tnt-components {
-            padding: 0;
-            cursor: pointer;
-            overflow: hidden;
-            display: flex;
-
-            a {
-                display: inline-flex;
-                width: 100%;
-                height: 100%;
-                cursor: inherit;
-                min-height: 3rem;
-                max-height: 5rem;
-                text-overflow: ellipsis;
-                flex-wrap: nowrap;
-                box-sizing: border-box;
-                align-items: center;
-
-                span.tnt-icon {
-                    padding: 0 0.5rem;
-                }
-            }
-
-            &.tnt-disabled {
-                opacity: 0.3;
-                pointer-events: none;
-                cursor: not-allowed;
-            }
-        }
-    }
-
-    tnt-header, tnt-footer {
+        transition: box-shadow ease-in-out 250ms;
         align-items: center;
         position: fixed;
-        padding: 0.5rem;
+        padding: 0 8px;
         box-sizing: border-box;
-        z-index: 998;
-        opacity: 0.9;
+
         @extend .tnt-title-large;
     }
 
-    tnt-header {
+    .tnt-header {
         height: $tnt-header-height;
         top: 0;
     }
 
-    tnt-footer {
+    .tnt-footer {
         height: $tnt-footer-height;
         bottom: 0;
     }
 
-    &:has(tnt-header) tnt-body {
-        padding-top: $tnt-header-height;
+    .tnt-body {
+        max-height: 100vh;
+        width: 100vw;
+        padding: 8px;
+        box-sizing: border-box;
+        background-color: red;
+        overflow: auto;
     }
 
-    &:has(tnt-footer) tnt-body {
-        padding-bottom: $tnt-footer-height;
-    }
 
-    &:has(tnt-header):has(tnt-footer) {
-        tnt-body {
-            min-height: calc(calc(30vh - $tnt-header-height) - $tnt-footer-height);
+    &:has(.tnt-header):not(:has(.tnt-footer)) {
+        .tnt-body {
+            margin-top: $tnt-header-height;
+            max-height: calc(100vh - $tnt-header-height);
         }
     }
 
-    &:has(tnt-footer):not(:has(tnt-header)) {
-        tnt-body {
-            min-height: calc(30vh - $tnt-footer-height);
+    &:has(.tnt-footer):not(:has(.tnt-header)) {
+        .tnt-body {
+            margin-bottom: $tnt-footer-height;
+            max-height: calc(100vh - $tnt-footer-height);
         }
     }
 
-    &:has(tnt-header):not(:has(tnt-footer)) {
-        tnt-body {
-            min-height: calc(30vh - $tnt-header-height);
-            padding-bottom: 1px;
-        }
-    }
-
-    tnt-side-nav-toggle {
-        display: block;
-        aspect-ratio: 1/1;
-        cursor: pointer;
-    }
-
-    @media #{$medium-and-up} {
-        &:has(tnt-side-nav) {
-            tnt-header, tnt-footer, tnt-body {
-                margin-left: $tnt-side-nav-width;
-                width: calc(100% - $tnt-side-nav-width);
-            }
-        }
-
-        tnt-side-nav-toggle {
-            display: none;
-        }
-    }
-
-    @media #{$small-and-down} {
-        tnt-side-nav {
-            transform: translateX(-105%);
-
-            &.expanded {
-                transform: translateX(0%);
-            }
-        }
-
-        tnt-header {
-            transition: 200ms ease-in-out;
-
-            &.expanded {
-                transform: translateX($tnt-side-nav-width);
-            }
+    &:has(.tnt-header):has(.tnt-footer) {
+        .tnt-body {
+            margin-top: $tnt-header-height;
+            margin-bottom: $tnt-footer-height;
+            max-height: calc(100vh - $tnt-header-height - $tnt-footer-height);
         }
     }
 }
+
+//.tnt-layout {
+//    display: block;
+
+//    tnt-side-nav {
+//        transition: 200ms ease-in-out;
+//        overflow-y: auto;
+//        overflow-x: hidden;
+//    }
+
+//    .tnt-header, .tnt-footer {
+//        display: flex;
+//        width: 100%;
+//        transition: box-shadow ease-in-out 500ms;
+//    }
+
+//    .tnt-body {
+//        display: block;
+//        min-height: 100vh;
+//    }
+
+//    tnt-side-nav {
+//        position: fixed;
+//        left: 0;
+//        top: 0;
+//        height: 100%;
+//        width: $tnt-side-nav-width;
+//        z-index: 999;
+//        padding: 0.5rem;
+//        box-sizing: border-box;
+
+//        tnt-side-nav-menu-group {
+//            transition: 200ms ease-in-out;
+//            user-select: none;
+//            cursor: pointer;
+//            overflow: hidden;
+//            display: block;
+//            width: 100%;
+
+//            & > span {
+//                display: inline-flex;
+//                height: 3rem;
+//                align-content: center;
+//                align-items: center;
+//                width: 100%;
+
+//@extend .tnt-actionable-bg-color-transparent;
+//            }
+
+//            & > span > span:last-child.tnt-icon {
+//                transition: 200ms ease-in-out;
+//                margin-left: auto;
+//                transform: rotateZ(0);
+//            }
+
+//            &.tnt-disabled {
+//                pointer-events: none;
+//                cursor: not-allowed;
+//                opacity: 0.3;
+//            }
+
+//            & > div {
+//                display: flex;
+//                flex-direction: column;
+//                margin-left: 1.25rem;
+//                height: fit-content;
+//                transition: height ease-in-out 200ms;
+
+//                & > div {
+//                    border-left: 1px solid $tnt-color-outline;
+//                }
+//            }
+
+//            &:not(.tnt-expanded) {
+//                & > div {
+//                    height: 0px;
+//                }
+//            }
+
+//            &.tnt-expanded {
+//                & > span > span:last-child.tnt-icon {
+//                    transform: rotateZ(180deg);
+//                }
+//            }
+
+//            @extend .tnt-title-small;
+
+//            span.tnt-icon {
+//                vertical-align: bottom;
+//                padding: 0 0.5rem;
+//            }
+//        }
+
+//        div.tnt-components {
+//            padding: 0;
+//            cursor: pointer;
+//            overflow: hidden;
+//            display: flex;
+
+//            a {
+//                display: inline-flex;
+//                width: 100%;
+//                height: 100%;
+//                cursor: inherit;
+//                min-height: 3rem;
+//                max-height: 5rem;
+//                text-overflow: ellipsis;
+//                flex-wrap: nowrap;
+//                box-sizing: border-box;
+//                align-items: center;
+
+//                span.tnt-icon {
+//                    padding: 0 0.5rem;
+//                }
+//            }
+
+//            &.tnt-disabled {
+//                opacity: 0.3;
+//                pointer-events: none;
+//                cursor: not-allowed;
+//            }
+//        }
+//    }
+
+//    .tnt-header, .tnt-footer {
+//        align-items: center;
+//        position: fixed;
+//        padding: 0.5rem;
+//        box-sizing: border-box;
+//        z-index: 998;
+//        opacity: 0.9;
+//        @extend .tnt-title-large;
+//    }
+
+//    .tnt-header {
+//        height: $tnt-header-height;
+//        top: 0;
+//    }
+
+//    .tnt-footer {
+//        height: $tnt-footer-height;
+//        bottom: 0;
+//    }
+
+//    &:has(.tnt-header) tnt-body {
+//        padding-top: $tnt-header-height;
+//    }
+
+//    &:has(.tnt-footer) tnt-body {
+//        padding-bottom: $tnt-footer-height;
+//    }
+
+//    &:has(.tnt-header):has(.tnt-footer) {
+//        .tnt-body {
+//            min-height: calc(calc(30vh - $tnt-header-height) - $tnt-footer-height);
+//        }
+//    }
+
+//    &:has(.tnt-footer):not(:has(.tnt-header)) {
+//        .tnt-body {
+//            min-height: calc(30vh - $tnt-footer-height);
+//        }
+//    }
+
+//    &:has(.tnt-header):not(:has(.tnt-footer)) {
+//        .tnt-body {
+//            min-height: calc(30vh - $tnt-header-height);
+//            padding-bottom: 1px;
+//        }
+//    }
+
+//    tnt-side-nav-toggle {
+//        display: block;
+//        aspect-ratio: 1/1;
+//        cursor: pointer;
+//    }
+
+//    @media #{$medium-and-up} {
+//        &:has(tnt-side-nav) {
+//            .tnt-header, .tnt-footer, .tnt-body {
+//                margin-left: $tnt-side-nav-width;
+//                width: calc(100% - $tnt-side-nav-width);
+//            }
+//        }
+
+//        tnt-side-nav-toggle {
+//            display: none;
+//        }
+//    }
+
+//    @media #{$small-and-down} {
+//        tnt-side-nav {
+//            transform: translateX(-105%);
+
+//            &.expanded {
+//                transform: translateX(0%);
+//            }
+//        }
+
+//        .tnt-header {
+//            transition: 200ms ease-in-out;
+
+//            &.expanded {
+//                transform: translateX($tnt-side-nav-width);
+//            }
+//        }
+//    }
+//}
