--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,33 +17,33 @@
     <TnTFooter>
         Footer content
     </TnTFooter>
-    @*
-    <TnTSideNav Title="My Title">
+    <TnTSideNav>
         <h3>
             My First Headline
         </h3>
+        @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
-            Home
+        Home
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" Href="/accordion">
-            Accordion
+        Accordion
         </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Buttons" Icon="@(new MaterialIcon(MaterialIcon.SmartButton))">
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Error))" Href="/Buttons">
-                Buttons
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Href="/FabButtons">
-                FabButton
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Href="/ImageButtons">
-                Image Buttons
-            </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Error))" Href="/Buttons">
+        Buttons
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Href="/FabButtons">
+        FabButton
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Href="/ImageButtons">
+        Image Buttons
+        </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ChildCare))" Href="/chips" Match="NavLinkMatch.All" Status="100">
-            Chips
+        Chips
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Language))" Href="/dialog">
-            Dialog
+        Dialog
         </TnTSideNavMenuLink>
 
 
@@ -62,85 +62,77 @@
 
 
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.PermContactCalendar))" Href="/scheduler" Match="NavLinkMatch.All" Status="100">
-            Scheduler
+        Scheduler
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MarkAsUnread))" Href="/Markdown">
-            Markdown
+        Markdown
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Warning))" Href="/card">
-            Card Some really long content that should be cut off or wrapped
+        Card Some really long content that should be cut off or wrapped
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Snooze))" Href="/snackbar">
-            Snackbar
+        Snackbar
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Href="/navlinks">
-            Nav Links
+        Nav Links
         </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Group 1" Icon="@(new MaterialIcon(MaterialIcon.Business))">
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Delete))" Href="/datagrid">
-                Data Grid
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Star))" Href="/progress">
-                Progress
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" Href="/accordion">
-                Accordion
-            </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Delete))" Href="/datagrid">
+        Data Grid
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Star))" Href="/progress">
+        Progress
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" Href="/accordion">
+        Accordion
+        </TnTSideNavMenuLink>
 
         </TnTSideNavMenuGroup>
         <TnTSideNavMenuGroup Title="Group 1" Icon="@(new MaterialIcon(MaterialIcon.Cached))" Disabled="true">
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.AccountBalance))" Href="/datagrid">
-                Data Grid
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Backup))" Href="/progress">
-                Progress
-            </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.AccountBalance))" Href="/datagrid">
+        Data Grid
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Backup))" Href="/progress">
+        Progress
+        </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
         <TnTDivider />
         <h3>
-            My Second Headline
+        My Second Headline
         </h3>
         <TnTSideNavMenuGroup Title="Group 2" Icon="@(new MaterialIcon(MaterialIcon.Dock))" Expand="true">
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Publish))" Href="/forms">
-                Forms
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.PanoramaHorizontal))" Href="/upload">
-                Upload
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Poll))" Href="/tabview">
-                Tabs
-            </TnTSideNavMenuLink>
-            <TnTSideNavMenuGroup Title="Group 2" Icon="@(new MaterialIcon(MaterialIcon.Face))" Expand="true">
-                <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Http))" Href="/forms">
-                    Forms
-                </TnTSideNavMenuLink>
-                <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Edit))" Href="/upload">
-                    Upload
-                </TnTSideNavMenuLink>
-                <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ArrowDropDownCircle))" Href="/tabview">
-                    Tabs
-                </TnTSideNavMenuLink>
-            </TnTSideNavMenuGroup>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Publish))" Href="/forms">
+        Forms
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.PanoramaHorizontal))" Href="/upload">
+        Upload
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Poll))" Href="/tabview">
+        Tabs
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuGroup Title="Group 2" Icon="@(new MaterialIcon(MaterialIcon.Face))" Expand="true">
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Http))" Href="/forms">
+        Forms
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Edit))" Href="/upload">
+        Upload
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ArrowDropDownCircle))" Href="/tabview">
+        Tabs
+        </TnTSideNavMenuLink>
+        </TnTSideNavMenuGroup>
         </TnTSideNavMenuGroup>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ShoppingBasket))" Href="/skeleton">
-            Skeleton
+        Skeleton
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.MergeType))" Href="/typeahead">
-            Typeahead
+        Typeahead
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ScreenLockLandscape))" Href="/InfiniteScroll">
-            Infinite Scroll
+        Infinite Scroll
         </TnTSideNavMenuLink>
+        *@
     </TnTSideNav>
-
-    <TnTBody>
-        @Body
-    </TnTBody>
-
-    <TnTFooter>
-        Footer content
-    </TnTFooter>
-    *@
 </TnTLayout>
 
 <TnTDialog @rendermode="InteractiveAuto" />
