Add responsive side nav toggle and hide on large screens
Introduced `HideOnLargeScreens` property to `TnTSideNav` to control visibility on large screens. Re-implemented `TnTSideNavToggle` for toggle functionality. Updated styles and JavaScript to support responsive layout and interactive side navigation.

- MainLayout.razor: Added `HideOnLargeScreens` attribute to `<TnTSideNav>`.
- TnTHeader.cs: Changed default `BackgroundColor` to `TnTColor.SurfaceContainerLowest`.
- TnTSideNav.cs: Added `HideOnLargeScreens`, `BackgroundColor`, and `TextColor` properties.
- TnTSideNavToggle.cs: Created new class for side nav toggle functionality.
- TnTSideNavToggle.razor: Removed old Razor component.
- TnTSideNavToggle.razor.cs: Removed old C# code-behind.
- TnTSideNavToggle.razor.js: Removed old JavaScript file.
- _layout.scss: Updated styles for side nav and toggle.
- TnTComponents.lib.module.js: Added `toggleSideNav` function and updated `bodyScrollListener`.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,7 +17,7 @@
     <TnTFooter>
         Footer content
     </TnTFooter>
-    <TnTSideNav>
+    <TnTSideNav HideOnLargeScreens="true">
         <h3>
             My First Headline
         </h3>
