--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -2,11 +2,11 @@
     @extend .tnt-label-large;
     appearance: none;
     user-select: none;
-    min-height: 2.5rem;
-    min-width: 2.5rem;
-    padding: 0 1rem;
+    min-height: 40px;
+    min-width: 40px;
+    padding: 0 16px;
     box-sizing: border-box;
-    margin: 0.5rem;
+    margin: 8px;
     transition: 250ms;
     position: relative;
 
@@ -19,14 +19,14 @@
     }
 
     &:not(:has(.tnt-icon)) {
-        padding: 0 1.5rem;
+        padding: 0 24px;
     }
 
     .tnt-icon {
         vertical-align: middle;
         text-align: inherit;
-        font-size: 1.125rem;
-        padding: 0 0.25rem;
+        font-size: 18px;
+        padding: 0 4px;
         pointer-events: none;
     }
 
@@ -42,10 +42,10 @@
             &:not(.tnt-alternative) {
                 padding: 0;
                 margin: 0;
-                height: 2rem;
-                width: 2rem;
-                top: 0.25rem;
-                left: calc(50% - 1rem);
+                height: 32px;
+                width: 32px;
+                top: 4px;
+                left: calc(50% - 16px);
             }
 
             &.tnt-alternative {
@@ -55,40 +55,40 @@
     }
 
     &.tnt-image-button {
-        height: 2.5rem;
-        width: 2.5rem;
+        height: 40px;
+        width: 40px;
         padding: 0;
 
         .tnt-icon {
-            font-size: 1.5rem;
+            font-size: 24px;
         }
     }
 }
 
 .tnt-components.tnt-fab {
     position: fixed;
-    bottom: 1rem;
+    bottom: 16px;
     transition: 250ms;
 
     button.tnt-components {
-        height: 3.5rem;
-        min-width: 3.5rem;
-        padding: 0.5rem;
+        height: 56px;
+        min-width: 56px;
+        padding: 8px;
     }
 
     .tnt-icon {
-        font-size: 2rem;
+        font-size: 32px;
     }
 }
 
-body:has(tnt-footer) {
+body:has(.tnt-footer) {
     .tnt-components.tnt-fab {
-        bottom: calc($tnt-footer-height + 1rem);
+        bottom: calc($tnt-footer-height + 16px);
     }
 
     @for $i from 1 through 5 {
         .tnt-components.tnt-fab:nth-child(#{$i}) {
-            right: #{(8 * ($i - 1) + 1)}rem;
+            right: #{(128 * ($i - 1) + 16)}px;
         }
     }
 }
