--- a/LiveTest/LiveTest.Client/Pages/NavLinks.razor
+++ b/LiveTest/LiveTest.Client/Pages/NavLinks.razor
@@ -2,69 +2,121 @@
 @using TnTComponents
 
 <h3>NavLinks</h3>
+<TnTRow>
+    <TnTColumn S="12">
+
+        <TnTNavLink href="#" Appearance="AnchorAppearance.Filled">
+            Filled
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Appearance="AnchorAppearance.Outlined" TextColor="TnTColor.OnSurface">
+            Outlined
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Appearance="AnchorAppearance.Underlined" TextColor="TnTColor.OnSurface">
+            Underlined
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Elevation="0">
+            Elevation 0
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Elevation="2">
+            Elevation 2
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Elevation="5">
+            Elevation 5
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Elevation="10">
+            Elevation 10
+        </TnTNavLink>
+
+        <TnTNavLink href="#" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
+            CornerRadius 0
+        </TnTNavLink>
+
+        <TnTNavLink href="#" BorderRadius="new TnTComponents.Core.TnTBorderRadius(10)">
+            CornerRadius 10
+        </TnTNavLink>
+
+        <TnTNavLink href="#" Disabled="true">
+            Disabled
+        </TnTNavLink>
+
+        <TnTNavLink href="#">
+            <MaterialIcon Icon="@MaterialIcon.Abc" />
+            StartIcon
+        </TnTNavLink>
+
+        <TnTNavLink href="#">
+            <MaterialIcon Icon="@MaterialIcon.Abc" />
+            Both
+            <MaterialIcon Icon="@MaterialIcon.ZoomOutMap" />
+        </TnTNavLink>
+
+        <TnTNavLink href="#">
+            EndIcon
+            <MaterialIcon Icon="@MaterialIcon.ZoomOutMap" />
+        </TnTNavLink>
+
+        <TnTNavLink href="#" TextAlignment="TextAlign.Left">
+            Left
+        </TnTNavLink>
+
+        <TnTNavLink href="#" TextAlignment="TextAlign.Right">
+            Right
+        </TnTNavLink>
+
+        <TnTNavLink href="#" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TintColor="TnTColor.Secondary">
+            Colored
+        </TnTNavLink>
+
+        <TnTNavLink href="#" BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
+            Obscure Radius
+        </TnTNavLink>
 
 
-<TnTNavLink Href="/navlinks">
-    <MaterialIcon Icon="@MaterialIcon.Search"/>
-    Button Text
-    <MaterialIcon Icon="@MaterialIcon.Group"/>
-</TnTNavLink>
+        <TnTNavLink href="/navlinks" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer" >
+            Match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" Outlined="true">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/buttons" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            No match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/" Match="NavLinkMatch.Prefix" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            Partial Match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" Elevation="5">
-    Button Text
-</TnTNavLink>
+        
+        <TnTNavLink href="/navlinks" Appearance="AnchorAppearance.Filled" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            Match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" Elevation="5" Outlined="true">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/buttons" Appearance="AnchorAppearance.Filled" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            No match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" Elevation="5">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/" Appearance="AnchorAppearance.Filled" Match="NavLinkMatch.Prefix" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            Partial Match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary">
-    Button Text
-</TnTNavLink>
 
-<TnTNavLink Href="/navlinks" BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary" Outlined="true">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/navlinks" Appearance="AnchorAppearance.Outlined" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            Match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" BackgroundColor="TnTColor.Secondary" TextColor="TnTColor.Tertiary">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/buttons" Appearance="AnchorAppearance.Outlined" Match="NavLinkMatch.All" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            No match
+        </TnTNavLink>
 
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
-    Button Text
-</TnTNavLink>
-
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)" Outlined="true">
-    Button Text
-</TnTNavLink>
-
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(0)">
-    Button Text
-</TnTNavLink>
-
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}">
-    Button Text
-</TnTNavLink>
-
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}" Outlined="true">
-    Button Text
-</TnTNavLink>
-
-<TnTNavLink Href="/navlinks" BorderRadius="new TnTComponents.Core.TnTBorderRadius(){StartEnd = 5}">
-    Button Text
-</TnTNavLink>
+        <TnTNavLink href="/" Appearance="AnchorAppearance.Outlined" Match="NavLinkMatch.Prefix" ActiveTextColor="TnTColor.OnTertiaryContainer" ActiveBackgroundColor="TnTColor.TertiaryContainer">
+            Partial Match
+        </TnTNavLink>
+    </TnTColumn>
+</TnTRow>
 
 
 @code {
