Refactor layout and remove unused side nav components
- Added <TnTSideNav> to MainLayout.razor, hidden on large screens.
- Commented out existing <TnTSideNavMenuLink> for home link.
- Refactored BuildRenderTree in TnTLayoutComponent.cs, added data-permanent attribute and new RenderContent method.
- Removed TnTSideNavMenuLink.razor and TnTSideNavMenuLink.razor.cs.
- Updated _anchor.scss for better nav link styling.
- Simplified layout by removing specific rule in _layout.scss.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -17,10 +17,16 @@
     <TnTFooter>
         Footer content
     </TnTFooter>
+
     <TnTSideNav HideOnLargeScreens="true">
         <h3>
             My First Headline
         </h3>
+        <TnTNavLink href="/" Match="NavLinkMatch.All">
+            <MaterialIcon Icon="@MaterialIcon.Home" />
+            Home
+        </TnTNavLink>
+
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
         Home
