Refactor navigation components and update styles
- Replace `TnTNavLink` with `TnTSideNavLink` in `MainLayout.razor`
- Add new parameters to `TnTNavLink` and handle `Disabled` state
- Add `DataPermanent` property to `TnTHeader` and `TnTLayoutComponent`
- Refactor `BuildRenderTree` in `TnTLayoutComponent` for conditional rendering
- Add hidden toggle indicator to `TnTSideNav`
- Introduce `TnTSideNavLink` with `Icon` and `Label` parameters
- Update `_layout.scss` for `TnTSideNavLink` styles and media queries
- Modify `TnTComponents.lib.module.js` for new toggle logic

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -22,10 +22,9 @@
         <h3>
             My First Headline
         </h3>
-        <TnTNavLink href="/" Match="NavLinkMatch.All">
-            <MaterialIcon Icon="@MaterialIcon.Home" />
-            Home
-        </TnTNavLink>
+        <TnTSideNavLink Label="Home" href="/" Match="NavLinkMatch.All" Disabled="true" />
+        <TnTSideNavLink Label="Accordion" href="/accordion" Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" />
+        <TnTSideNavLink Label="Anchors" href="/navlinks" Icon="@(new MaterialIcon(MaterialIcon.Link))" />
 
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
