Rename Title property to Label in TnTAccordionChild
Renamed the `Title` property to `Label` across the `TnTAccordionChild` component for consistency:
- Updated all instances in `Accordion.razor`.
- Modified `TnTAccordion.razor` to reference `child.Label`.
- Changed `TnTAccordionChild.cs` to use `Label` and updated the `[Parameter, EditorRequired]` attribute accordingly.

--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -34,7 +34,7 @@
                         <div class="@(headerBuilder.AddTnTInteractable(child).Build())"
                              onclick="TnTComponents.toggleAccordion(event)">
                             <h3>
-                                @child.Title
+                                @child.Label
                             </h3>
                             <MaterialIcon Icon="@MaterialIcon.ArrowDropDown" />
                         </div>
