--- a/LiveTest/LiveTest.Client/Pages/Accordion.razor
+++ b/LiveTest/LiveTest.Client/Pages/Accordion.razor
@@ -3,7 +3,7 @@
 
 
 <TnTAccordion>
-    <TnTAccordionChild Title="Title 1" OpenByDefault="true">
+    <TnTAccordionChild Label="Title 1" OpenByDefault="true">
         <TnTButton ElementTitle="Button 1">
             Button 1
         </TnTButton>
@@ -14,11 +14,11 @@
             Button 3
         </TnTButton>
     </TnTAccordionChild>
-    <TnTAccordionChild Title="Title 2" OpenByDefault="true">
+    <TnTAccordionChild Label="Title 2" OpenByDefault="true">
         <TnTProgressIndicator Appearance="ProgressAppearance.Ring"></TnTProgressIndicator>
         <TnTProgressIndicator Appearance="ProgressAppearance.Linear"></TnTProgressIndicator>
     </TnTAccordionChild>
-    <TnTAccordionChild Title="Title 3">
+    <TnTAccordionChild Label="Title 3">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl enim, lobortis vitae leo quis, vulputate vehicula arcu. Sed purus elit, iaculis non turpis nec, dictum porttitor mi. Vestibulum molestie sapien quis turpis auctor ullamcorper. Ut scelerisque hendrerit sem, eu cursus mi scelerisque pulvinar. Praesent vitae posuere magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum finibus vitae augue eget convallis. Fusce vitae dictum lectus. Etiam sem sapien, pharetra quis lectus in, tempor auctor sem. Aliquam erat volutpat.
 
         Cras tortor elit, lacinia sit amet leo non, ornare venenatis turpis. Quisque et ligula vel diam egestas lacinia. Suspendisse ut luctus arcu. Praesent erat eros, tincidunt non mi quis, bibendum semper elit. Donec id elit ligula. Praesent non pretium sem. Sed in pharetra risus. Praesent posuere vulputate sodales. Aenean imperdiet, enim ac ultrices lobortis, ligula eros ullamcorper lacus, ut blandit tortor elit convallis massa. Ut nulla urna, finibus sed fringilla nec, pharetra a ex. Donec eget egestas odio. Nunc sodales sed purus iaculis posuere. Aenean interdum dictum sagittis. Integer nulla dui, tincidunt eget orci vehicula, vulputate sollicitudin dolor. Ut tincidunt augue eu dui faucibus tempor. Mauris ac hendrerit erat.
@@ -33,7 +33,7 @@
 </TnTAccordion>
 
 <TnTAccordion LimitToOneExpanded="true">
-    <TnTAccordionChild Title="Title 1" OpenByDefault="true">
+    <TnTAccordionChild Label="Title 1" OpenByDefault="true">
         <TnTButton ElementTitle="Button 1">
             Button 1
         </TnTButton>
@@ -44,11 +44,11 @@
             Button 3
         </TnTButton>
     </TnTAccordionChild>
-    <TnTAccordionChild Title="Title 2" OpenByDefault="true">
+    <TnTAccordionChild Label="Title 2" OpenByDefault="true">
         <TnTProgressIndicator Appearance="ProgressAppearance.Ring"></TnTProgressIndicator>
         <TnTProgressIndicator Appearance="ProgressAppearance.Linear"></TnTProgressIndicator>
     </TnTAccordionChild>
-    <TnTAccordionChild Title="Title 3">
+    <TnTAccordionChild Label="Title 3">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl enim, lobortis vitae leo quis, vulputate vehicula arcu. Sed purus elit, iaculis non turpis nec, dictum porttitor mi. Vestibulum molestie sapien quis turpis auctor ullamcorper. Ut scelerisque hendrerit sem, eu cursus mi scelerisque pulvinar. Praesent vitae posuere magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum finibus vitae augue eget convallis. Fusce vitae dictum lectus. Etiam sem sapien, pharetra quis lectus in, tempor auctor sem. Aliquam erat volutpat.
 
         Cras tortor elit, lacinia sit amet leo non, ornare venenatis turpis. Quisque et ligula vel diam egestas lacinia. Suspendisse ut luctus arcu. Praesent erat eros, tincidunt non mi quis, bibendum semper elit. Donec id elit ligula. Praesent non pretium sem. Sed in pharetra risus. Praesent posuere vulputate sodales. Aenean imperdiet, enim ac ultrices lobortis, ligula eros ullamcorper lacus, ut blandit tortor elit convallis massa. Ut nulla urna, finibus sed fringilla nec, pharetra a ex. Donec eget egestas odio. Nunc sodales sed purus iaculis posuere. Aenean interdum dictum sagittis. Integer nulla dui, tincidunt eget orci vehicula, vulputate sollicitudin dolor. Ut tincidunt augue eu dui faucibus tempor. Mauris ac hendrerit erat.
