Refactor TnTSideNavMenuGroup component and update styles
Replaced the old TnTSideNavMenuGroup implementation with a new C# class in TnTSideNavMenuGroup.cs, removing the corresponding Razor, code-behind, and JavaScript files. Updated MainLayout.razor to include the new component. Modified _layout.scss to add styles for the new component and adjusted existing styles for consistency. Added a new function in TnTComponents.lib.module.js to handle side navigation group toggling.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -26,6 +26,12 @@
         <TnTSideNavLink Label="Accordion" href="/accordion" Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" />
         <TnTSideNavLink Label="Anchors" href="/navlinks" Icon="@(new MaterialIcon(MaterialIcon.Link))" />
 
+        <TnTSideNavMenuGroup Icon="@(new MaterialIcon(MaterialIcon.SmartButton))" Label="Buttons">
+            <TnTSideNavLink Label="Buttons" href="/buttons" />
+            <TnTSideNavLink Label="Image Buttons" href="/imagebuttons" Icon="@(new MaterialIcon(MaterialIcon.MusicNote))" />
+            <TnTSideNavLink Label="FABs" href="/fabbuttons" Icon="@(new MaterialIcon(MaterialIcon.Link))" />
+
+        </TnTSideNavMenuGroup>
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
         Home
