--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -23,7 +23,7 @@
     }
 
     .tnt-body {
-        max-height: 100vh;
+        height: 100vh;
         width: 100vw;
         padding: 8px;
         box-sizing: border-box;
@@ -47,12 +47,13 @@
             @extend .tnt-title-small;
         }
 
-        .tnt-side-nav-link {
-            height: 46px;
-            display: flex;
+        .tnt-side-nav-link, .tnt-side-nav-menu-group-button {
             align-items: center;
+            display: flex;
+            height: 46px;
             text-decoration: none;
             padding-left: 48px;
+            @extend .tnt-label-large;
 
             &:has(.tnt-icon) {
                 padding-left: 16px;
@@ -84,17 +85,66 @@
         transition: color 250ms ease-in-out;
     }
 
+    .tnt-side-nav-menu-group {
+        max-height: 50px;
+        overflow: hidden;
+        transition: max-height 250ms ease-in-out;
+
+        .tnt-side-nav-menu-group-button {
+            justify-content: space-between;
+        }
+
+        .tnt-end-icon {
+            float: right;
+            transition: 250ms;
+            padding:8px;
+        }
+
+        & > a.tnt-side-nav-link {
+            margin-left: 16px;
+            position: relative;
+            border-start-start-radius: 0;
+            border-end-start-radius: 0;
+
+            &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                height: 100%;
+                top: 0;
+                background-color: transparent;
+                width: 4px;
+                transition: background-color ease-in-out 250ms;
+            }
+        }
+
+        &:has( > .tnt-side-nav-group-toggle-indicator .tnt-toggle) {
+            max-height: 100vh;
+
+            .tnt-side-nav-menu-group-button{
+                .tnt-end-icon{
+                    transform:rotateZ(180deg);
+                }
+            }
+
+            a.tnt-side-nav-link:before {
+                background-color: $tnt-color-outline;
+            }
+        }
+    }
+
+
     &:has(.tnt-header):not(:has(.tnt-footer)) {
         .tnt-body {
             margin-top: $tnt-header-height;
-            max-height: calc(100vh - $tnt-header-height);
+            height: calc(100vh - $tnt-header-height);
         }
     }
 
     &:has(.tnt-footer):not(:has(.tnt-header)) {
         .tnt-body {
             margin-bottom: $tnt-footer-height;
-            max-height: calc(100vh - $tnt-footer-height);
+            height: calc(100vh - $tnt-footer-height);
         }
     }
 
@@ -102,7 +152,7 @@
         .tnt-body {
             margin-top: $tnt-header-height;
             margin-bottom: $tnt-footer-height;
-            max-height: calc(100vh - $tnt-header-height - $tnt-footer-height);
+            height: calc(100vh - $tnt-header-height - $tnt-footer-height);
         }
     }
 
