Add "Editors" menu group and new CSS class for icons
In `MainLayout.razor`, added a new side navigation menu group
labeled "Editors" with a link to a "Markdown Editor" page,
including an icon.

In `style.scss`, introduced a new CSS class `.fa` that sets the
text color to `$tnt-color-on-background` to ensure icons match
the theme's background color scheme.

--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -40,6 +40,10 @@ body {
     background-color: $tnt-color-background;
 }
 
+.fa {
+    color: $tnt-color-on-background;
+}
+
 * {
     scrollbar-color: $tnt-color-on-surface-variant $tnt-color-surface-variant;
 }
