--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -35,6 +35,10 @@
 
         <TnTSideNavLink Label="Chips" href="/chips" Icon="@(new MaterialIcon(MaterialIcon.BedroomChild))" />
         <TnTSideNavLink Label="Dialogs" href="/dialog" Icon="@(new MaterialIcon(MaterialIcon.Diamond))" />
+
+        <TnTSideNavMenuGroup Icon="@(new MaterialIcon(MaterialIcon.EditNote))" Label="Editors">
+            <TnTSideNavLink Label="Markdown Editor" href="/markdown" Icon="@(new MaterialIcon(MaterialIcon.MarkAsUnread))" />
+        </TnTSideNavMenuGroup>
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
         Home
