Enhance DataGrid and TnT components with new features
- DataGridComponent.razor: Added HeaderAlignment to columns 2 and 3, updated TnTButton properties.
- DataGrid.razor: Cleaned up commented-out sections and headers.
- MainLayout.razor: Added new navigation link for "Grid".
- TnTColumnBase.razor: Added using directives, updated RenderDefaultHeaderContent.
- TnTColumnBase.razor.cs: Removed AdditionalAttributes, added HeaderAlignment.
- TnTDataGrid.razor: Added inherits and implements directives, updated table attributes.
- TnTDataGrid.razor.cs: Removed AdditionalAttributes, added OverscanCount, removed JSRuntime and DisposeAsync.
- TnTDataGrid.razor.js: Simplified tntInitResizable function.
- _datagrid.scss: Updated table header styles, added hover effects, removed commented-out styles.

--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -5,10 +5,10 @@
 <div style="height: 60vh; overflow-y:scroll">
     <TnTDataGrid Items="@Items" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
         <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
-        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" />
-        <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" />
+        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" HeaderAlignment="TextAlign.Left" />
+        <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
         <TnTTemplateColumn>
-            <TnTButton OnClick="() => ItemClicked(context)" Appearance="ButtonAppearance.Text" StopPropagation="true">
+            <TnTButton OnClickCallback="() => ItemClicked(context)" Appearance="ButtonAppearance.Text" TextColor="TnTColor.OnSurface" BackgroundColor="TnTColor.Surface" StopPropagation="true">
                 <MaterialIcon Icon="@MaterialIcon.Edit" />
                 Edit
             </TnTButton>
