--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -16,18 +16,37 @@
         position: sticky;
         top: 0;
         background-color: $tnt-color-surface-container-highest;
-        box-shadow: 0px 1px $tnt-color-outline;
         z-index: 3;
+        @extend .tnt-elevation-2;
 
-        tr.tnt-data-grid-header {
+
+        tr.tnt-components.tnt-data-grid-header {
+
             th {
-                padding: 0 2rem;
+                padding: 0;
                 margin: 0;
                 position: relative;
                 user-select: none;
-                min-width: 1rem;
-                text-align: center;
+                min-width: 16px;
                 @extend .tnt-title-medium;
+
+                .tnt-header-content {
+                    padding: 4px 8px;
+                    vertical-align: middle;
+                    color: $tnt-color-on-surface;
+
+                    .tnt-icon {
+                        float: right;
+                    }
+
+                    &.tnt-interactable:hover {
+                        color: $tnt-color-secondary;
+                    }
+
+                    &.tnt-sorted-on {
+                        color: $tnt-color-primary;
+                    }
+                }
 
                 .tnt-resizeable {
                     position: absolute;
@@ -38,25 +57,6 @@
                     cursor: col-resize;
                     border-right: 1px solid $tnt-color-outline;
                 }
-
-                &.tnt-col-sortable {
-                    //&:hover {
-                    //    background-color: $tnt-color-surface-container;
-                    //    opacity: 0.8;
-                    //}
-                    //cursor: pointer;
-
-                    .tnt-sorted-on {
-                        color: $tnt-color-secondary;
-                    }
-
-                    .tnt-sort-icon {
-                        position: absolute;
-                        color: inherit;
-                        right: 0;
-                        margin-right: 1rem;
-                    }
-                }
             }
         }
     }
@@ -64,7 +64,7 @@
     &.tnt-stripped {
         tbody {
             tr:nth-child(odd) {
-                background-color: $tnt-color-surface-container;
+                background-color: $tnt-color-surface-variant;
             }
         }
     }
@@ -139,3 +139,145 @@
         }
     }
 }
+
+//table.tnt-components.tnt-datagrid {
+//    min-width: 100%;
+//    border-collapse: collapse;
+//    border-spacing: 0;
+//    table-layout: fixed;
+
+//    &.tnt-loading {
+//        opacity: 0.3;
+//    }
+
+//    @media #{$small-and-down} {
+//        table-layout: auto;
+//    }
+
+//    thead {
+//        position: sticky;
+//        top: 0;
+//        background-color: $tnt-color-surface-container-highest;
+//        box-shadow: 0px 1px $tnt-color-outline;
+//        z-index: 3;
+
+//        tr.tnt-data-grid-header {
+//            th {
+//                padding: 0 2rem;
+//                margin: 0;
+//                position: relative;
+//                user-select: none;
+//                min-width: 1rem;
+//                text-align: center;
+//                @extend .tnt-title-medium;
+
+//                .tnt-resizeable {
+//                    position: absolute;
+//                    top: 0;
+//                    right: 0;
+//                    width: 5px;
+//                    background-color: transparent;
+//                    cursor: col-resize;
+//                    border-right: 1px solid $tnt-color-outline;
+//                }
+
+//                &.tnt-col-sortable {
+//&:hover {
+//    background-color: $tnt-color-surface-container;
+//    opacity: 0.8;
+//}
+//cursor: pointer;
+
+//                    .tnt-sorted-on {
+//                        color: $tnt-color-secondary;
+//                    }
+
+//                    .tnt-sort-icon {
+//                        position: absolute;
+//                        color: inherit;
+//                        right: 0;
+//                        margin-right: 1rem;
+//                    }
+//                }
+//            }
+//        }
+//    }
+
+//    &.tnt-stripped {
+//        tbody {
+//            tr:nth-child(odd) {
+//                background-color: $tnt-color-surface-container;
+//            }
+//        }
+//    }
+
+//    &.tnt-compact {
+//        width: 100%;
+
+//        tr {
+//            td {
+//                white-space: nowrap;
+//                text-overflow: ellipsis;
+//                overflow: clip;
+//                height: 32px;
+//            }
+
+//            @media #{$medium-and-up} {
+//                &:hover {
+//                    td {
+//                        white-space: revert;
+//                        text-overflow: revert;
+//                    }
+//                }
+//            }
+//        }
+//    }
+
+//    tbody {
+//        tr {
+//            background-color: $tnt-color-surface-container-lowest;
+
+//            td {
+//                box-sizing: border-box;
+//                padding: 0.1rem 0.25rem;
+
+//                &:empty {
+//                    position: relative;
+
+//                    &::before {
+//                        position: absolute;
+//                        content: '';
+//                        background: linear-gradient(to right, transparent 33%, color-mix(in srgb, transparent 60%, $tnt-color-inverse-surface) 50%, transparent 66%);
+//                        background-size: 300%;
+//                        animation: tnt-skeleton-animation 1.5s infinite ease-in-out;
+//                        width: 100%;
+//                        height: 100%;
+//                        top: 0;
+//                        left: 0;
+//                        transform: scaleX(0.9) scaleY(0.75);
+//                    }
+//                }
+//            }
+//        }
+//    }
+
+//    &:not(.tnt-loading) {
+//        thead tr.tnt-data-grid-header th.tnt-col-sortable {
+//            &:hover {
+//                background-color: $tnt-color-surface-container;
+//                opacity: 0.8;
+//            }
+
+//            cursor: pointer;
+//        }
+
+//        tbody tr.tnt-clickable {
+//            transition: background-color ease-in-out 200ms;
+//            cursor: pointer;
+
+//            &:hover {
+//                background-color: color-mix(in srgb, $tnt-color-surface-tint 25%, transparent);
+//            }
+//        }
+//    }
+//}
